--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
     "next": "^14.2.15",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
