--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.3.1",
+    "d3": "^7.9.0",
+    "framer-motion": "^12.0.6",
     "next": "^14.2.15",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
@@ -17,6 +19,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
