--- a/src/app/data/project-info.json
+++ b/src/app/data/project-info.json
@@ -3,11 +3,10 @@
       "header": "Insight Edge",
       "name": "<div class='flex flex-row'><p>Insight Edge -&nbsp;</p><p class='text-italic'> Instagram Suite</p></div>",
       "preview": "/assets/insightEdge.webp",
-      "description": "Digital Technology Immersion Practicum project with Meta's Instagram client to design a suite of tools to enhance content creation process.",
+      "description": "Instagram's suite of tools to enhance content creation process",
       "link": "/projects/insightEdge",
       "tools": [
-        "User Research", 
-        "Figma",
+        "UX Design",
         "Product Management"
       ],
       "id": "project-insight-edge"
@@ -16,13 +15,12 @@
         "header": "Microsoft Course Registration",
         "name": "<div class='flex flex-row'><p>Microsoft Course Registration System -&nbsp;</p><p class='text-italic'> MPS Project</p></div>",
         "preview": "/assets/microsoft.webp",
-        "description": "Collaboration with Microsoft clients to prototype a Course Registration platform utilizing Microsoft Azure and Angular.",
+        "description": "Microsoft Course Registration platform utilizing MS Azure and Angular",
         "link": "/projects/microsoft",
         "tools": [
           "Angular",
           "User Research",
-          "Figma",
-          "PrimeNG"
+          "Figma"
         ],
         "id": "project-ms-course"
       },
@@ -30,11 +28,10 @@
       "header": "Prisoner Express PWA App",
       "name": "<div class='flex flex-row'><p>Prisoner Express App –&nbsp;</p><p class='text-italic'> App Design & Prototyping</p></div>",
       "preview": "/assets/prisonerExpress.webp",
-      "description": "App Design & Prototyping project with Prisoner Express to develop a PWA application for both Prisoners and Prisoner Express admins.",
+      "description": "PWA newsletter application for Prisoners by Prisoner Express",
       "link": "/projects/prisonerExpress",
       "tools": [
         "VueJS",
-        "PrimeVue",
         "Bootstrap",
         "User Research"
       ],
@@ -44,7 +41,7 @@
       "header": "BeautyAI",
       "name": "<div class='flex flex-row'><p>BeautyAI -&nbsp;</p><p class='text-italic'> Human Computer Interaction Project</p></div>",
       "preview": "/assets/beautyAi.webp",
-      "description": "Human-Centered Design project that addresses the issue of makeup application for users with varied and unique facial compositions.",
+      "description": "AI driven makeup application tool for users with varied facial compositions",
       "link": "/projects/beautyAi",
       "tools": [
         "User Research",
@@ -53,10 +50,23 @@
       "id": "project-beauty-ai"
     },
     {
+      "header": "Connections Cherished",
+      "name": "<div class='flex flex-row'>Connections Cherished</div>",
+      "preview": "/assets/connectionsC.webp",
+      "description": "An application that allows users to cherish their connections",
+      "link": "/projects/connectionsCherished",
+      "tools": [
+        "Flutter",
+        "Firebase",
+        "Dart"
+      ],
+      "id": "project-connections-cherished"
+    },
+    {
       "header": "CaptionCore",
       "name": "<div class='flex flex-row'><p>CaptionCore -&nbsp;</p><p class='text-italic'> Designing Data Products</p></div>",
       "preview": "/assets/captionCore.webp",
-      "description": "Designed Data Product that helps companies generate brand-focused captions for publicity posts, using Machine Learning models.",
+      "description": "Data Product to generate brand-focused publicity post captions",
       "link": "https://github.com/ssunil3232/caption-generator",
       "tools": [
         "Streamlit",
@@ -70,7 +80,7 @@
       "header": "Swift Tunes Decoded",
       "name": "<div class='flex flex-row'><p>Swift Songs Decoded -&nbsp;</p><p class='text-italic'> Interactive Information Visualization</p></div>",
       "preview": "/assets/swiftTunes.webp",
-      "description": "Interactive Data Visualization analyzing Taylor Swift's songs for danceability, acousticness, etc, as well as use of colors.",
+      "description": "Interactive analysis and breakdown of Taylor Swift's songs",
       "link": "https://sonia-sunil-d3.vercel.app/tswift-discography/",
       "tools": [
         "Figma",
@@ -83,7 +93,7 @@
       "header": "Under the Covers",
       "name": "<div class='flex flex-row'><p>Under the Covers -&nbsp;</p><p class='text-italic'> Interactive Information Visualization</p></div>",
       "preview": "/assets/underTheCovers.webp",
-      "description": "'Bridgerton' themed exploration of couples' sleeping apart habits, reasons and preferences, through an interactive data visual breakdown.",
+      "description": "'Bridgerton' themed exploration of couples' sleeping apart habits",
       "link": "https://sonia-sunil-d3.vercel.app/under-the-covers/",
       "tools": [
         "Figma",
@@ -91,18 +101,5 @@
         "Javascript"
       ],
       "id": "project-under-covers"
-    },
-    {
-      "header": "Connections Cherished",
-      "name": "<div class='flex flex-row'>Connections Cherished</div>",
-      "preview": "/assets/connectionsC.webp",
-      "description": "A mobile application that helps users to cherish their connections through tracking and reminders to connect with them again.",
-      "link": "/projects/connectionsCherished",
-      "tools": [
-        "Flutter",
-        "Firebase",
-        "Dart"
-      ],
-      "id": "project-connections-cherished"
     }
   ]
