--- a/src/app/data/project-info.json
+++ b/src/app/data/project-info.json
@@ -10,6 +10,7 @@
         "Product Management"
       ],
       "id": "project-insight-edge",
+      "label": "Insight Edge",
       "new": false
     },
     {
@@ -24,6 +25,7 @@
           "Figma"
         ],
         "id": "project-ms-course",
+        "label": "Microsoft CR",
         "new": false
       },
     {
@@ -38,6 +40,7 @@
         "User Research"
       ],
       "id": "project-prisoner-express",
+      "label": "Prisoner Express",
       "new": false
     },
     {
@@ -51,6 +54,7 @@
         "Figma"
       ],
       "id": "project-beauty-ai",
+      "label": "Beauty AI",
       "new": false
     },
     {
@@ -65,6 +69,7 @@
         "Dart"
       ],
       "id": "project-connections-cherished",
+      "label": "Connections Cherished",
       "new": true
     },
     {
@@ -80,6 +85,7 @@
         "Figma"
       ],
       "id": "project-caption-core",
+      "label": "CaptionCore",
       "new": false
     },
     {
@@ -94,6 +100,7 @@
         "Javascript"
       ],
       "id": "project-swift-tunes",
+      "label": "Swift Tunes Decoded",
       "new": false
     },
     {
@@ -108,6 +115,7 @@
         "Javascript"
       ],
       "id": "project-under-covers",
+      "label": "Under the Covers",
       "new": false
     }
   ]
